# dava.engine

./: .clang-format  .gitignore  LICENSE  README  README.md  build_tools.py  old.gitattributes
Programs/AssetCacheServer/: CMakeLists.txt
Programs/AssetCacheServer/Classes/: ApplicationSettings.cpp  ApplicationSettings.h  CacheDB.cpp  CacheDB.h  PrintHelpers.cpp  PrintHelpers.h  ServerCacheEntry.cpp  ServerCacheEntry.h  ServerCore.cpp  ServerCore.h  ServerLogics.cpp  ServerLogics.h  SharedDataParser.cpp  SharedDataParser.h  SharedDataRequester.cpp  SharedDataRequester.h  main.cpp
Programs/AssetCacheServer/DataQt/: AssetCacheServerWidget.ui  CustomServerWidget.ui  SharedPoolWidget.ui  SharedServerWidget.ui  TrayIcon.qrc
Programs/AssetCacheServer/MacOSSpecific/: Info.plist  icon.icns
Programs/CMakeTool/: CMakeLists.txt  CMakeToolHelp.docx  Info.plist  icon.icns
Programs/CMakeTool/Classes/: configstorage.cpp  configstorage.h  filesystemhelper.cpp  filesystemhelper.h  help.cpp  help.h  main.cpp  platformHelper.cpp  platformHelper.h  processwrapper.cpp  processwrapper.h
Programs/CMakeTool/Data/: config_mac.json  config_windows.json
Programs/CMakeTool/DataQt/: main.qml  resources.qrc
Programs/Dep/: CMakeLists.txt  dep.cpp  tinydir.h
Programs/FontGenerator/: CMakeLists.txt
Programs/FontGenerator/Classes/: FontConvertor.cpp  FontConvertor.h  TtfFont.cpp  TtfFont.h  main.cpp
Programs/FontGenerator/Data/: charlist_cyrillic.txt  charlist_latin.txt  charlist_latin_cyrillic.txt
Programs/FontGenerator/MacOSSpecific/: version.plist
Programs/FontGenerator/Scripts/: charlist_generator.py
Programs/ImageUnpacker/: CMakeLists.txt
Programs/ImageUnpacker/Classes/: ResaveUtility.cpp  ResaveUtility.h  main.cpp
Programs/ImageUnpacker/MacOSSpecific/: main.mm
Programs/Launcher/: CMakeCache.txt  CMakeLists.txt  MODULES_LOG.txt  Makefile  QtConfTemplate.in  cmake_install.cmake  config_example.yaml  icon.icns
Programs/Launcher/Classes/: defines.h  main.cpp
Programs/Launcher/DataQt/: icons.qrc.depends  mainwindow.ui  preferencesdialog.ui
Programs/Launcher/QtHelpers/: Makefile  cmake_install.cmake  config.in
Programs/Launcher/Teamcity/: createPackageInfo.py
Programs/PerformanceTests/: .gitignore  CMakeLists.txt  EditorConfig.yaml  ui.uieditor
Programs/PerformanceTests/Data/: .gitignore  quality.yaml
Programs/PerformanceTests/DataSource/: .gitignore  check_updated_source.py  cleanup_3d.py  cleanup_Gfx.py  convert_everything.py  copy_lka.py  copy_sfx.py  create_file_structure.py  texture_dimension_validator.py  touch_Data.py
Programs/PerformanceTests/Scripts/: TemplateConvert3D.in  TemplateConvert3DTanks.in  TemplateConvert3D_FX.in  copy_data.py  start_tests.py
Programs/QuickEd/: .gitignore  CMakeLists.txt  post_build.py  prototypes.org
Programs/QuickEd/Classes/: main.cpp
Programs/QuickEd/Data/: Help.docs
Programs/QuickEd/DataQt/: QuickEdResources.qrc  quicked_en.qm  quicked_en.ts
Programs/QuickEd/MacOSSpecific/: Info.plist  icon.icns
Programs/QuickEd/UI/: CompositeFindFilterWidget.ui  DialogAddPreset.ui  DialogConfigurePreset.ui  FindInProjectDialog.ui  FindResultsWidget.ui  IssueNavigatorWidget.ui  PropertiesWidget.ui  TableEditorDialog.ui  fontmanagerdialog.ui  localizationeditordialog.ui  mainwindow.ui
Programs/RHI-Cube/: CMakeLists.txt
Programs/RHI-Cube/Classes/: RhiCubeApp.cpp  RhiCubeApp.h
Programs/RHI-Cube/MacOSSpecific/: RHIcube-Info.plist  main.mm
Programs/RHI-Cube/Win32Specific/: main.cpp
Programs/RHI-Cube/iOSSpecific/: RHIcube-Info.plist
Programs/ResourceEditor1/: CMakeLists.txt
Programs/ResourceEditor1/Classes/: Constants.h  Preset.cpp  Preset.h  SpriteResourcesPacker.cpp  SpriteResourcesPacker.h  StringConstants.h
Programs/ResourceEditor1/DataQt/: ActionComponentEditor.ui  BaseAddEntityDialog.ui  BeastDialog.ui  CubemapEditorDialog.ui  ImageSplitter.ui  ImageSplitterNormal.ui  LODEditor.ui  MultilineEditor.ui  Resources.qrc  RunActionEventWidget.ui  mainwindow.ui  materialeditor.ui  planeloddialog.ui  texturebrowser.ui
Programs/ResourceEditor1/Documentation/: known-issues.txt
Programs/ResourceEditor1/MacOSSpecific/: icon.icns
Programs/ResourceEditor1/Teamcity/: deploy_qt.sh  packAppQt.bat  verifyAndInstMagick.sh  verifyScheme.sh
Programs/TestBed/: CMakeLists.txt  ui.uieditor
Programs/TestBed/Data/: AnalyticsConfig.yaml  EngineSettings.yaml  Tupdefault.lua  Tupfile.lua  Tuprules.inc.lua  Tuprules.lua  quality.yaml  readme.md
Programs/TestBed/DataSource/: quality.yaml
Programs/TestBed/Scripts/: add_test.py  build_local_meta.py  exclude.json  ios-deploy  local_http_pack_server.py  start_local_http_server.py  start_unit_tests.py  stop_local_http_server.py
Programs/TestServer/: CMakeLists.txt
Programs/TestServer/Classes/: TestServer.cpp  TestServer.h
Programs/TestServer/MacOSSpecific/: Info.plist
Programs/TexConverter/: CMakeLists.txt
Programs/TexConverter/Sources/: main.cpp
Programs/UIViewer/: .gitignore  CMakeLists.txt
Programs/UIViewer/Sources/: NativeDelegateIos.mm  UIViewerApp.cpp  UIViewerApp.h
Programs/UWPRunner/: CMakeLists.txt  make_uwprunner.bat
Programs/UWPRunner/Classes/: AppxBundleHelper.cpp  AppxBundleHelper.h  ArchiveExtraction.cpp  ArchiveExtraction.h  ConsoleApp.cpp  RegKey.cpp  RegKey.h  SvcHelper.cpp  SvcHelper.h  UWPLogConsumer.cpp  UWPLogConsumer.h  UWPRunner.cpp  UWPRunner.h  main.cpp
Programs/UnitTests/: CMakeLists.txt  ui.uieditor
Programs/UnitTests/Data/: .gitignore
Programs/UnitTests/Scripts/: add_test.py  gen_local_meta_db.py  ios-deploy  start_local_http_server.py
Sources/Internal/: Android.mk  CMakeLists.txt  DAVAClassRegistrator.cpp  DAVAClassRegistrator.h  DAVAConfig.h  DAVAEngine.h  DoxygenDocumenation.h
Sources/Internal/Analytics/: Analytics.h  AnalyticsEvent.h  LoggingBackend.h
Sources/Internal/Animation/: AnimatedObject.cpp  AnimatedObject.h  Animation.cpp  Animation.h  AnimationBinaryFormat.md  AnimationChannel.cpp  AnimationChannel.h  AnimationClip.cpp  AnimationClip.h  AnimationManager.cpp  AnimationManager.h  AnimationTrack.cpp  AnimationTrack.h  (+11 more)
(+5146 files in other folders)
